objects/DT_Landing_Navigation__c.object
<CustomObject>
    <fields>
        <fullName>Case_Manager_URL__c</fullName>
        <label>Case Manager URL</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component_Name__c</fullName>
        <label>Component Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_LandNav_External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DT_Parameters__c</fullName>
        <inlineHelpText>Parameters should be in format
{&quot;Query_String_Param_Name_1&quot;:&quot;Task_Field_API_Name_1&quot;, &quot;Query_String_Param_Name_2&quot;:&quot;Task_Field_API_Name_2&quot;,
...}</inlineHelpText>
        <label>Parameters</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Self_Service_URL__c</fullName>
        <label>Self Service URL</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Landing Navigation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Module Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Landing Navigations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>